--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -1,6 +1,17 @@
+.container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 1em;
+}
+
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   width: 700px;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
 }
