--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -1,4 +1,4 @@
-.button {
+button {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -7,4 +7,12 @@
   font-size: 1.8em;
   color: black;
   border: 1px solid rgb(214, 210, 210);
+}
+
+.wide {
+  width: 50%;
+}
+
+.normal {
+  width: 25%;
 }
